--- a/HotelServer/src/main/resources/application.properties
+++ b/HotelServer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=HotelServer
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_db
 spring.datasource.username=root
-spring.datasource.password=Sujatha1208@
+spring.datasource.password=test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
